--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   },
   "dependencies": {
     "axios": "^0.16.x",
+    "chroma-js": "^1.3.4",
     "micro": "^7.3.x",
     "micro-route": "^2.4.0",
-    "nuxt": "latest"
+    "nuxt": "^0.10.6"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
@@ -27,6 +28,7 @@
     "eslint-plugin-html": "^1.7.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
+    "micro-dev": "^1.1.0",
     "nodemon": "^1.11.0"
   },
   "engines": {
