--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "chroma-js": "^1.3.4",
     "micro": "^7.3.x",
     "micro-route": "^2.4.0",
-    "nuxt": "^0.10.6"
+    "nuxt": "^0.10.6",
+    "vue-color": "^2.3.1"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
