--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "nuxt build",
     "start": "NODE_ENV=production node server.js",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "precommit": "npm run lint",
+    "static": "nuxt generate",
+    "deploy": "np && release && now dist/ -p --name polychroma && now alias"
   },
   "now": {
     "alias": "polychroma"
@@ -19,17 +21,20 @@
     "micro": "^7.3.x",
     "micro-route": "^2.4.0",
     "nuxt": "^0.10.6",
-    "vue-color": "^2.3.1"
+    "vue-color": "^2.3.1",
+    "vue-slider-component": "^2.3.9"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
     "eslint": "^3.13.1",
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-html": "^1.7.0",
+    "eslint-plugin-prettier": "^2.2.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
     "micro-dev": "^1.1.0",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "prettier": "^1.5.3"
   },
   "engines": {
     "node": ">8.1.x"
