--- a/package.json
+++ b/package.json
@@ -5,35 +5,35 @@
   "author": "Jeff <rustyangel@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "node server.js",
+    "dev": "nuxt",
     "build": "nuxt build",
-    "start": "NODE_ENV=production node server.js",
+    "start": "nuxt start",
+    "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint",
-    "static": "nuxt generate",
     "deploy": "np && release && now dist/ -p --name polychroma && now alias"
   },
   "now": {
     "alias": "polychroma"
   },
   "dependencies": {
+    "@nuxtjs/google-analytics": "^1.0.0",
     "chroma-js": "^1.3.4",
-    "micro": "^7.3.x",
-    "micro-route": "^2.4.0",
-    "nuxt": "^0.10.6",
+    "nuxt": "^1.0.0-rc3",
     "vue-color": "^2.3.1",
     "vue-slider-component": "^2.3.9"
   },
   "devDependencies": {
-    "babel-eslint": "^7.1.1",
-    "eslint": "^3.13.1",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-plugin-html": "^1.7.0",
+    "babel-eslint": "^7.2.3",
+    "eslint": "^4.3.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-html": "^3.1.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-prettier": "^2.2.0",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^2.0.1",
-    "micro-dev": "^1.1.0",
-    "nodemon": "^1.11.0",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "prettier": "^1.5.3"
   },
   "engines": {
