--- a/package.json
+++ b/package.json
@@ -31,10 +31,9 @@
     "eslint-plugin-html": "^3.1.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-prettier": "^2.2.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
-    "prettier": "^1.5.3"
+    "prettier-eslint": "^6.4.2"
   },
   "engines": {
     "node": ">8.1.x"
