--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "polychroma",
   "version": "1.1.0",
-  "description":
-    "Generate better CSS gradients using alternative colour spaces & Bezier interpolation.",
+  "description": "Generate better CSS gradients using alternative colour spaces & Bezier interpolation.",
   "author": "Jeff <rustyangel@gmail.com>",
   "private": true,
   "scripts": {
@@ -12,8 +11,7 @@
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint",
-    "deploy":
-      "np && release && npm run generate && now dist/ -p --name polychroma && now alias"
+    "deploy": "np && release && npm run generate && now dist/ -p --name polychroma && now alias"
   },
   "now": {
     "alias": "polychroma"
