--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "deploy": "np && release && npm run generate && now dist/ -p --name polychroma && now alias",
     "dev": "nuxt",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "newlint": "prettier-eslint '**/*.{js,vue}' --list-different --ignore dist/** .nuxt/**",
+    "lint": "prettier-eslint '**/*.{js,vue}' --write --ignore dist/** .nuxt/**",
+    "lint:styles": "stylelint --fix",
     "start": "nuxt start"
   },
   "dependencies": {
@@ -23,13 +23,18 @@
   },
   "devDependencies": {
     "@zazen/eslint-config": "^0.2.0",
+    "@zazen/stylelint-config": "^0.1.1",
     "eslint": "^5.5.0",
-    "eslint-loader": "^2.1.0"
+    "eslint-loader": "^2.1.0",
+    "stylelint": "^9.5.0"
   },
   "engines": {
     "node": ">8.1.x"
   },
   "now": {
     "alias": "polychroma"
+  },
+  "prettier": {
+    "tabWidth": 4
   }
 }
