--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@nuxtjs/google-analytics": "^2.0.0",
     "chroma-js": "^1.3.7",
-    "nuxt": "^1.0.0-rc3",
+    "nuxt": "^1.4.2",
     "vue-color": "^2.3.1",
     "vue-slider-component": "^2.3.9"
   },
