--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "nuxt",
     "generate": "nuxt generate",
     "lint": "prettier-eslint '**/*.{js,vue}' --write --list-different --ignore '{dist,.nuxt}/**'",
-    "lint:styles": "stylelint --fix",
+    "lint:styles": "stylelint '**/*.{css,vue}' --fix -ip '{.nuxt,dist}/**'",
     "start": "nuxt start"
   },
   "dependencies": {
@@ -19,7 +19,8 @@
     "chroma-js": "^1.3.7",
     "nuxt": "^1.4.2",
     "vue-color": "^2.3.1",
-    "vue-slider-component": "^2.3.9"
+    "vue-slider-component": "^2.3.9",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@zazen/eslint-config": "^0.3.0",
