--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@nuxtjs/google-analytics": "2.0.x",
     "@nuxtjs/pwa": "2.6.x",
-    "chroma-js": "^1.3.7",
+    "chroma-js": "2.0.x",
     "nuxt": "2.4.x",
     "vue-color": "2.7.x"
   },
