--- a/package.json
+++ b/package.json
@@ -15,27 +15,35 @@
     "start": "nuxt start"
   },
   "dependencies": {
-    "@nuxtjs/google-analytics": "^2.0.0",
-    "chroma-js": "^1.3.7",
-    "nuxt": "^1.4.2",
-    "vue-color": "^2.3.1",
-    "vue-slider-component": "^2.3.9",
-    "vuex": "^3.0.1"
+    "@nuxtjs/google-analytics": "2.0.x",
+    "@nuxtjs/pwa": "2.6.x",
+    "chroma-js": "2.0.x",
+    "nuxt": "2.4.x",
+    "vue-color": "2.7.x"
   },
   "devDependencies": {
-    "@zazen/eslint-config": "^0.3.0",
-    "@zazen/stylelint-config": "^0.2.0",
-    "eslint": "^5.5.0",
-    "eslint-loader": "^2.1.0",
-    "stylelint": "^9.5.0"
+    "@zazen/eslint-config": "1.0.x",
+    "@zazen/stylelint-config": "1.0.x",
+    "eslint": "5.12.x",
+    "eslint-loader": "2.1.x",
+    "eslint-plugin-vue": "5.1.x",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
+    "stylelint": "9.10.x",
+    "stylelint-scss": "^3.5.2"
   },
   "engines": {
-    "node": ">8.1.x"
+    "node": ">8.x"
   },
   "now": {
     "alias": "polychroma"
   },
   "prettier": {
-    "tabWidth": 4
+    "arrowParens": "always",
+    "htmlWhitespaceSensitivity": "strict",
+    "semi": false,
+    "singleQuote": true,
+    "tabWidth": 4,
+    "trailingComma": "all"
   }
 }
