--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "@nuxtjs/google-analytics": "2.0.x",
     "@nuxtjs/pwa": "2.6.x",
     "chroma-js": "2.0.x",
-    "nuxt": "2.4.x",
-    "vue-color": "2.7.x"
+    "nuxt": "2.4.x"
   },
   "devDependencies": {
     "@zazen/eslint-config": "1.0.x",
