--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
   "version": "1.2.1",
   "scripts": {
     "build": "nuxt build",
-    "precommit": "npm run lint",
     "deploy": "np && release && npm run generate && now dist/ -p --name polychroma && now alias",
     "dev": "nuxt",
     "generate": "nuxt generate",
-    "lint": "prettier-eslint '**/*.{js,vue}' --write --list-different --ignore '{dist,.nuxt}/**'",
-    "lint:styles": "stylelint '**/*.{css,vue}' --fix -ip '{.nuxt,dist}/**'",
+    "lint": "prettier-eslint '**/*.{js,vue}' --list-different --ignore '{dist,.nuxt}/**'",
+    "lint:styles": "stylelint '**/*.{css,vue}' --ip '{.nuxt,dist}/**'",
     "start": "nuxt start"
   },
   "dependencies": {
@@ -21,11 +20,14 @@
     "nuxt": "2.4.x"
   },
   "devDependencies": {
+    "@starptech/prettyhtml": "0.8.x",
     "@zazen/eslint-config": "1.0.x",
     "@zazen/stylelint-config": "1.0.x",
     "eslint": "5.12.x",
     "eslint-loader": "2.1.x",
     "eslint-plugin-vue": "5.1.x",
+    "husky": "1.3.x",
+    "lint-staged": "8.1.x",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "stylelint": "9.10.x",
@@ -34,12 +36,28 @@
   "engines": {
     "node": ">8.x"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,vue}": [
+      "prettier-eslint --write",
+      "git add"
+    ],
+    "*.{css,vue}": [
+      "stylelint --fix",
+      "git add"
+    ]
+  },
   "now": {
     "alias": "polychroma"
   },
   "prettier": {
     "arrowParens": "always",
-    "htmlWhitespaceSensitivity": "strict",
+    "htmlWhitespaceSensitivity": "ignore",
+    "proseWrap": "never",
     "semi": false,
     "singleQuote": true,
     "tabWidth": 4,
