--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@nuxtjs/google-analytics": "2.0.x",
+    "@nuxtjs/markdownit": "1.2.x",
     "@nuxtjs/pwa": "2.6.x",
     "chroma-js": "2.0.x",
     "nuxt": "2.4.x"
@@ -29,6 +30,8 @@
     "husky": "1.3.x",
     "lint-staged": "8.1.x",
     "node-sass": "^4.11.0",
+    "postcss-mixins": "6.2.x",
+    "postcss-nested": "4.1.x",
     "sass-loader": "^7.1.0",
     "stylelint": "9.10.x",
     "stylelint-scss": "^3.5.2"
