--- a/package.json
+++ b/package.json
@@ -21,20 +21,14 @@
     "nuxt": "2.4.x"
   },
   "devDependencies": {
-    "@starptech/prettyhtml": "0.8.x",
     "@zazen/eslint-config": "1.0.x",
     "@zazen/stylelint-config": "1.0.x",
     "eslint": "5.12.x",
-    "eslint-loader": "2.1.x",
     "eslint-plugin-vue": "5.1.x",
     "husky": "1.3.x",
     "lint-staged": "8.1.x",
-    "node-sass": "^4.11.0",
-    "postcss-mixins": "6.2.x",
-    "postcss-nested": "4.1.x",
-    "sass-loader": "^7.1.0",
-    "stylelint": "9.10.x",
-    "stylelint-scss": "^3.5.2"
+    "postcss-advanced-variables": "3.0.x",
+    "stylelint": "9.10.x"
   },
   "engines": {
     "node": ">8.x"
