--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "7.14.x",
     "eslint-plugin-vue": "7.1.x",
     "husky": "4.3.x",
+    "import-sort-style-python": "1.0.x",
     "lint-staged": "10.5.x",
     "postcss-advanced-variables": "3.0.x",
     "prettier": "2.1.x",
