Change routes options

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,6 @@
   "version": 2,
   "routes": [
     { "handle": "filesystem" },
-    { "src": "/.*", "dest": "/index.html" }
+    { "src": "/(.*)", "dest": "/$1", "continue": true }
   ]
 }
