--- a/package.json
+++ b/package.json
@@ -16,21 +16,25 @@
     "test": "yarn lint"
   },
   "dependencies": {
-    "@nuxtjs/google-analytics": "2.2.x",
-    "@nuxtjs/markdownit": "1.2.x",
-    "@nuxtjs/pwa": "2.6.x",
-    "chroma-js": "2.1.x",
-    "nuxt": "2.11.x"
+    "@nuxtjs/google-analytics": "2.4.0",
+    "@nuxtjs/markdownit": "1.2.10",
+    "@nuxtjs/pwa": "3.0.2",
+    "chroma-js": "2.1.0",
+    "nuxt": "2.14.5"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "3.0.x",
     "@zazen/eslint-config": "2.0.x",
     "@zazen/stylelint-config": "1.0.x",
-    "eslint": "6.8.x",
+    "eslint": "7.9.x",
     "eslint-plugin-vue": "6.2.x",
-    "husky": "4.2.x",
-    "lint-staged": "10.1.x",
+    "husky": "4.3.x",
+    "lint-staged": "10.3.x",
     "postcss-advanced-variables": "3.0.x",
-    "stylelint": "13.3.x"
+    "stylelint": "13.7.x",
+    "tailwindcss": "1.8.x",
+    "tailwindcss-capsize": "1.1.x",
+    "tailwindcss-typography": "3.1.x"
   },
   "engines": {
     "node": ">8.x"
