--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
-# dependencies
+## DEPENDENCIES ######################################################
 node_modules
 
-# logs
-npm-debug.log
+## LOGS ##############################################################
+*.log
 
-# Nuxt build
-.nuxt
+## GENERATED #########################################################
+/build/
+/public/build
+/api/index.js
+/api/index.js.map
 
-# Nuxt generate
-dist
-
-# Service worker
-sw.*
-
+## SECRETS ###########################################################
+.env
+.env.*
 .vercel
