Ignore built styles

--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,14 @@ node_modules
 *.log
 
 ## GENERATED #########################################################
+.cache
+.ouput
 /build/
 /public/build
 /api/index.js
 /api/index.js.map
+
+/app/styles
 
 ## SECRETS ###########################################################
 .env
