--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
     "package.json": "prettier --write"
   },
   "prettier": {
-    "htmlWhitespaceSensitivity": "strict",
+    "plugins": [
+      "./node_modules/prettier-plugin-packagejson"
+    ],
     "semi": false,
-    "singleQuote": true,
-    "trailingComma": "all"
+    "singleQuote": true
   },
   "dependencies": {
     "@remix-run/node": "1.14.3",
@@ -72,7 +73,6 @@
     "polished": "4.2.2",
     "postcss": "8.4.21",
     "prettier": "2.8.4",
-    "prettier-plugin-import-sort": "0.0.7",
     "prettier-plugin-packagejson": "2.4.3",
     "stylelint": "15.3.0",
     "tsup": "6.6.3",
