--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "singleQuote": true
   },
   "dependencies": {
+    "@radix-ui/react-select": "1.2.1",
+    "@radix-ui/react-slider": "1.1.1",
     "@remix-run/node": "1.14.3",
     "@remix-run/react": "1.14.3",
     "@remix-run/vercel": "1.14.3",
@@ -48,6 +50,7 @@
     "@vanilla-extract/sprinkles": "1.5.1",
     "@vercel/node": "2.9.13",
     "clsx": "1.2.1",
+    "colorjs.io": "0.4.3",
     "isbot": "3.6.7",
     "react": "18.2.0",
     "react-dom": "18.2.0"
