--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@remix-run/react": "1.14.3",
     "@remix-run/vercel": "1.14.3",
     "@vanilla-extract/css": "1.10.0",
+    "@vanilla-extract/dynamic": "2.0.3",
     "@vanilla-extract/sprinkles": "1.5.1",
     "@vercel/node": "2.9.13",
     "clsx": "1.2.1",
