--- a/package.json
+++ b/package.json
@@ -8,14 +8,9 @@
     "*.css.ts"
   ],
   "scripts": {
-    "build": "run-s \"build:*\"",
-    "build:css": "npm run generate:css",
-    "build:remix": "remix build",
+    "build": "remix build",
     "changeset": "changeset add",
-    "dev": "run-p \"dev:*\"",
-    "dev:css": "npm run generate:css -- --watch",
-    "dev:remix": "remix dev",
-    "generate:css": "tsup",
+    "dev": "remix dev",
     "start": "remix-serve build",
     "typecheck": "tsc"
   },
@@ -43,13 +38,14 @@
   "dependencies": {
     "@radix-ui/react-select": "1.2.1",
     "@radix-ui/react-slider": "1.1.1",
-    "@remix-run/node": "1.14.3",
-    "@remix-run/react": "1.14.3",
-    "@remix-run/vercel": "1.14.3",
-    "@vanilla-extract/css": "1.10.0",
+    "@remix-run/css-bundle": "1.16.0",
+    "@remix-run/node": "1.16.0",
+    "@remix-run/react": "1.16.0",
+    "@remix-run/vercel": "1.16.0",
+    "@vanilla-extract/css": "1.11.0",
     "@vanilla-extract/dynamic": "2.0.3",
-    "@vanilla-extract/sprinkles": "1.5.1",
-    "@vercel/node": "2.9.13",
+    "@vanilla-extract/sprinkles": "1.6.0",
+    "@vercel/node": "2.14.2",
     "clsx": "1.2.1",
     "colorjs.io": "0.4.3",
     "isbot": "3.6.7",
@@ -58,28 +54,25 @@
   },
   "devDependencies": {
     "@changesets/changelog-github": "0.4.8",
-    "@changesets/cli": "2.26.0",
-    "@remix-run/dev": "1.14.3",
-    "@remix-run/eslint-config": "1.14.3",
-    "@remix-run/serve": "1.14.3",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
+    "@changesets/cli": "2.26.1",
+    "@remix-run/dev": "1.16.0",
+    "@remix-run/eslint-config": "1.16.0",
+    "@remix-run/serve": "1.16.0",
+    "@types/react": "18.2.6",
+    "@types/react-dom": "18.2.4",
     "@vanilla-extract/css-utils": "0.1.3",
-    "@vanilla-extract/esbuild-plugin": "2.2.2",
     "@zazen/eslint-config": "6.3.0",
     "@zazen/stylelint-config": "3.0.0",
     "autoprefixer": "10.4.14",
-    "eslint": "8.36.0",
+    "eslint": "8.40.0",
     "husky": "4.3.x",
     "import-sort-style-python": "1.0.2",
-    "lint-staged": "13.2.0",
-    "npm-run-all": "4.1.5",
+    "lint-staged": "13.2.2",
     "polished": "4.2.2",
-    "postcss": "8.4.21",
-    "prettier": "2.8.4",
+    "postcss": "8.4.23",
+    "prettier": "2.8.8",
     "prettier-plugin-packagejson": "2.4.3",
-    "stylelint": "15.3.0",
-    "tsup": "6.6.3",
+    "stylelint": "15.6.1",
     "typescript": "4.8.4"
   },
   "engines": {
