--- a/package.json
+++ b/package.json
@@ -38,16 +38,15 @@
   "devDependencies": {
     "@changesets/changelog-github": "0.3.0",
     "@changesets/cli": "2.14.1",
-    "@nuxt/eslint": "^0.7.0",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@pinia/nuxt": "^0.9.0",
     "@tailwindcss/typography": "^0.5.15",
     "@vite-pwa/nuxt": "^0.10.6",
-    "@zazen/eslint-config": "2.1.x",
+    "@zazen/eslint-config": "7.4.1",
     "@zazen/stylelint-config": "1.0.x",
     "autoprefixer": "^10.4.20",
-    "eslint": "7.14.x",
-    "eslint-plugin-vue": "7.1.x",
+    "eslint": "9.39.2",
+    "eslint-plugin-vue": "10.7.0",
     "lint-staged": "10.5.x",
     "nuxt": "^3.15.0",
     "postcss": "^8.4.49",
@@ -59,6 +58,9 @@
     "typescript": "^5.7.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
+  },
+  "overrides": {
+    "@stylistic/eslint-plugin": "5.7.1"
   },
   "engines": {
     "node": ">=18.0.0"
