--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   },
   "lint-staged": {
     "*.{js,vue}": "eslint --fix",
-    "*.{css,vue}": "stylelint --fix",
-    "package.json": "prettier --write"
+    "*.{css,vue}": "stylelint --fix"
   },
   "prettier": {
     "htmlWhitespaceSensitivity": "strict",
@@ -48,7 +47,7 @@
     "eslint": "9.39.2",
     "eslint-plugin-vue": "10.7.0",
     "lint-staged": "10.5.x",
-    "nuxt": "^3.15.0",
+    "nuxt": "4.3.0",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "simple-git-hooks": "2.13.1",
