--- a/package.json
+++ b/package.json
@@ -32,15 +32,15 @@
   },
   "dependencies": {
     "chroma-js": "^2.6.0",
-    "pinia": "^2.3.0"
+    "pinia": "3.0.4"
   },
   "devDependencies": {
     "@changesets/changelog-github": "0.3.0",
     "@changesets/cli": "2.14.1",
-    "@nuxtjs/tailwindcss": "^6.12.0",
-    "@pinia/nuxt": "^0.9.0",
+    "@nuxtjs/tailwindcss": "6.14.0",
+    "@pinia/nuxt": "0.11.3",
     "@tailwindcss/typography": "^0.5.15",
-    "@vite-pwa/nuxt": "^0.10.6",
+    "@vite-pwa/nuxt": "1.1.0",
     "@zazen/eslint-config": "7.4.1",
     "@zazen/stylelint-config": "1.0.x",
     "autoprefixer": "^10.4.20",
@@ -55,8 +55,7 @@
     "tailwindcss": "^3.4.17",
     "tailwindcss-capsize": "4.0.1",
     "typescript": "^5.7.2",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue": "3.5.27"
   },
   "overrides": {
     "@stylistic/eslint-plugin": "5.7.1"
