--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,17 +10,19 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     steps:
+      # https://github.com/actions/checkout
       - name: Checkout repo
-        uses: actions/checkout@master
+        uses: actions/checkout@v6
         with:
-          # This makes Actions fetch all git history so that Changesets can 
+          # This makes Actions fetch all git history so that Changesets can
           # generate changelogs with the correct commits.
           fetch-depth: 0
 
-      - name: Setup Node.js 12.x
-        uses: actions/setup-node@master
+      # https://github.com/actions/setup-node
+      - name: Setup Node.js 24.x
+        uses: actions/setup-node@v4
         with:
-          node-version: 12.x
+          node-version: 24.x
 
       - name: Install dependencies
         run: npm ci
@@ -28,8 +30,9 @@ jobs:
       # https://github.com/changesets/action
       - name: Create release PR
         id: changesets
-        uses: changesets/action@master
+        uses: changesets/action@v1
         with:
-          title: 'Chore: Publish release'
+          commit: Publish release
+          title: Publish release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
