--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,4 @@
 {
-  "version": 2,
-  "routes": [
-    { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "/$1", "continue": true }
-  ]
+	"version": 2,
+	"routes": [{ "handle": "filesystem" }, { "src": "/(.*)", "dest": "/$1", "continue": true }]
 }
