--- a/package.json
+++ b/package.json
@@ -1,67 +1,63 @@
 {
-  "name": "polychroma",
-  "version": "2.1.3",
-  "private": true,
-  "description": "Generate better CSS gradients using alternative colour spaces & Bezier interpolation.",
-  "author": "Jeff Nelson (https://tidaltheory.io)",
-  "scripts": {
-    "build": "nuxt build",
-    "changeset": "changeset add",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "lint": "npm run lint:scripts && npm run lint:styles",
-    "lint:scripts": "eslint '**/*.{js,vue}' --fix --ignore-pattern '.nuxt/**' --ignore-pattern 'dist/**' --ignore-pattern 'static/**'",
-    "lint:styles": "stylelint '**/*.{css,vue}' --ip '{.nuxt,dist}/**'",
-    "prepare": "npx simple-git-hooks",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
-  "type": "module",
-  "simple-git-hooks": {
-    "pre-commit": "npx lint-staged"
-  },
-  "lint-staged": {
-    "*.{js,vue}": "eslint --fix",
-    "*.{css,vue}": "stylelint --fix"
-  },
-  "prettier": {
-    "htmlWhitespaceSensitivity": "strict",
-    "semi": false,
-    "singleQuote": true,
-    "trailingComma": "all"
-  },
-  "dependencies": {
-    "chroma-js": "^2.6.0",
-    "pinia": "3.0.4"
-  },
-  "devDependencies": {
-    "@changesets/changelog-github": "0.3.0",
-    "@changesets/cli": "2.14.1",
-    "@nuxtjs/tailwindcss": "6.14.0",
-    "@pinia/nuxt": "0.11.3",
-    "@tailwindcss/typography": "^0.5.15",
-    "@types/node": "25.2.0",
-    "@vite-pwa/nuxt": "1.1.0",
-    "@zazen/eslint-config": "7.4.1",
-    "@zazen/stylelint-config": "1.0.x",
-    "autoprefixer": "^10.4.20",
-    "eslint": "9.39.2",
-    "eslint-plugin-vue": "10.7.0",
-    "lint-staged": "10.5.x",
-    "nuxt": "4.3.0",
-    "postcss": "^8.4.49",
-    "prettier": "^3.4.2",
-    "simple-git-hooks": "2.13.1",
-    "stylelint": "13.8.x",
-    "tailwindcss": "^3.4.17",
-    "tailwindcss-capsize": "4.0.1",
-    "typescript": "^5.7.2",
-    "vue": "3.5.27"
-  },
-  "overrides": {
-    "@stylistic/eslint-plugin": "5.7.1"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  }
+	"name": "polychroma",
+	"version": "2.1.3",
+	"private": true,
+	"description": "Generate better CSS gradients using alternative colour spaces & Bezier interpolation.",
+	"author": "Jeff Nelson (https://tidaltheory.io)",
+	"type": "module",
+	"scripts": {
+		"build": "nuxt build",
+		"changeset": "changeset add",
+		"dev": "nuxt dev",
+		"fmt": "oxfmt",
+		"generate": "nuxt generate",
+		"postinstall": "nuxt prepare",
+		"lint": "npm run lint:scripts && npm run lint:styles",
+		"lint:scripts": "eslint '**/*.{js,vue}' --fix --ignore-pattern '.nuxt/**' --ignore-pattern 'dist/**' --ignore-pattern 'static/**'",
+		"lint:styles": "stylelint '**/*.{css,vue}' --ip '{.nuxt,dist}/**'",
+		"prepare": "npx simple-git-hooks",
+		"preview": "nuxt preview"
+	},
+	"dependencies": {
+		"chroma-js": "^2.6.0",
+		"pinia": "3.0.4"
+	},
+	"devDependencies": {
+		"@changesets/changelog-github": "0.3.0",
+		"@changesets/cli": "2.14.1",
+		"@nuxtjs/tailwindcss": "6.14.0",
+		"@pinia/nuxt": "0.11.3",
+		"@tailwindcss/typography": "^0.5.15",
+		"@types/node": "25.2.0",
+		"@vite-pwa/nuxt": "1.1.0",
+		"@zazen/eslint-config": "7.4.1",
+		"@zazen/stylelint-config": "1.0.x",
+		"autoprefixer": "^10.4.20",
+		"eslint": "9.39.2",
+		"eslint-plugin-vue": "10.7.0",
+		"lint-staged": "10.5.x",
+		"nuxt": "4.3.0",
+		"oxfmt": "0.27.0",
+		"postcss": "^8.4.49",
+		"simple-git-hooks": "2.13.1",
+		"stylelint": "13.8.x",
+		"tailwindcss": "^3.4.17",
+		"tailwindcss-capsize": "4.0.1",
+		"typescript": "^5.7.2",
+		"vue": "3.5.27"
+	},
+	"overrides": {
+		"@stylistic/eslint-plugin": "5.7.1"
+	},
+	"simple-git-hooks": {
+		"pre-commit": "npx lint-staged"
+	},
+	"lint-staged": {
+		"*.{js,vue}": "eslint --fix",
+		"*.{css,vue}": "stylelint --fix",
+		"*": "oxfmt --no-error-on-unmatched-pattern"
+	},
+	"engines": {
+		"node": ">=18.0.0"
+	}
 }
