--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"postinstall": "nuxt prepare",
 		"lint": "npm run lint:scripts && npm run lint:styles",
 		"lint:scripts": "eslint '**/*.{js,vue}' --fix --ignore-pattern '.nuxt/**' --ignore-pattern 'dist/**' --ignore-pattern 'static/**'",
-		"lint:styles": "stylelint '**/*.{css,vue}' --ip '{.nuxt,dist}/**'",
+		"lint:styles": "stylelint '**/*.{css,vue}'",
 		"prepare": "npx simple-git-hooks",
 		"preview": "nuxt preview"
 	},
@@ -31,7 +31,7 @@
 		"@types/node": "25.2.0",
 		"@vite-pwa/nuxt": "1.1.0",
 		"@zazen/eslint-config": "7.4.1",
-		"@zazen/stylelint-config": "1.0.x",
+		"@zazen/stylelint-config": "5.1.0",
 		"autoprefixer": "^10.4.20",
 		"eslint": "9.39.2",
 		"eslint-plugin-vue": "10.7.0",
@@ -39,8 +39,9 @@
 		"nuxt": "4.3.0",
 		"oxfmt": "0.27.0",
 		"postcss": "^8.4.49",
+		"postcss-html": "1.8.1",
 		"simple-git-hooks": "2.13.1",
-		"stylelint": "13.8.x",
+		"stylelint": "17.1.0",
 		"tailwindcss": "^3.4.17",
 		"tailwindcss-capsize": "4.0.1",
 		"typescript": "^5.7.2",
